// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`color and size 1`] = `
<svg
  style={
    Object {
      "color": "blue",
      "display": "inline",
      "fill": "blue",
      "flexDirection": "column",
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif",
      "fontSize": 18,
      "fontStyle": "normal",
      "fontWeight": "normal",
      "height": 18,
      "lineHeight": "24px",
      "msHyphens": "auto",
      "overflowWrap": "break-word",
      "position": "relative",
      "textAlign": "left",
      "textDecoration": "none",
      "top": 3,
      "verticalAlign": "top",
      "whiteSpace": "pre-wrap",
      "width": 18,
    }
  }
/>
`;

exports[`render 1`] = `
<svg
  style={
    Object {
      "color": "black",
      "display": "inline",
      "fill": "black",
      "flexDirection": "column",
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif",
      "fontSize": 16,
      "fontStyle": "normal",
      "fontWeight": "normal",
      "height": 16,
      "lineHeight": "24px",
      "msHyphens": "auto",
      "overflowWrap": "break-word",
      "position": "relative",
      "textAlign": "left",
      "textDecoration": "none",
      "top": 4,
      "verticalAlign": "top",
      "whiteSpace": "pre-wrap",
      "width": 16,
    }
  }
/>
`;
